<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_transport_test</name>
  <version>1.0.0</version>
  <description>Test for QRB ROS transport</description>
  <maintainer email="quic_penwang@quicinc.com">Peng Wang</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>qrb_ros_transport_image_type</depend>
  <depend>qrb_ros_transport_imu_type</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
